---
title: npm-registry-proxy
---
erDiagram
    User {
        biging id PK "server-generated"
        string email "NOT NULL UNIQUE"
        UUID api_key "server-generated"
    }
    Usage {
        biging id PK "server-generated"
        string date_ "NOT NULL"
        integer count_ "NOT NULL"
        UUID api_key FK "NOT NULL"
    }
    Request {
        biging id PK "server-generated"
        string time "NOT NULL"
        jsonb headers
        UUID api_key FK "NOT NULL"
        biging response_id FK
    }
    Response {
        biging id PK "server-generated"
        string time "NOT NULL"
        jsonb headers
        jsonb body
        biging request_id FK "NOT NULL"
    }
    User ||..o{ Usage: "is associated with"
    User ||..o{ Request: "makes/is made by"
    Request ||..|| Response: "is fulfilled by/fulfills"

